Feature: refactor